# sparkle_template

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: builder.rs  extract.rs  handle.rs  interaction.rs  lib.rs  main.rs  parse.rs
src/builder/: component.rs  interaction_response.rs  interaction_response_builder.rs
src/extract/: interaction_data.rs  modal_component.rs  option.rs
src/interaction/: help.rs  mock.rs
