[package]
name = "sparkle_template"
edition = "2021"
authors = ["Lara Kayaalp <me@lara.lv>"]
description = "Safe, concise Discord interaction handling for Twilight"
documentation = "https://docs.rs/sparkle_template"
repository = "https://github.com/laralove143/sparkle_template"
license = "MIT"

[dependencies]
twilight-http = { version = "0.15", features = ["rustls-webpki-roots", "simd-json", "trust-dns"] }
twilight-model = "0.15"
