[package]
name = "sparkle_template"
edition = "2021"
authors = ["Lara Kayaalp <me@lara.lv>"]
description = "Safe, concise Discord interaction handling for Twilight"
documentation = "https://docs.rs/sparkle_template"
repository = "https://github.com/laralove143/sparkle_template"
license = "MIT"

[lints.rust]
absolute-paths-not-starting-with-crate = "warn"
elided-lifetimes-in-paths = "warn"
keyword-idents = "warn"
let-underscore-drop = "warn"
macro-use-extern-crate = "warn"
meta-variable-misuse = "warn"
missing-abi = "warn"
missing-copy-implementations = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
non-ascii-idents = "warn"
rust-2021-incompatible-or-patterns = "warn"
rust-2021-prefixes-incompatible-syntax = "warn"
rust-2021-prelude-collisions = "warn"
single-use-lifetimes = "warn"
trivial-casts = "warn"
trivial-numeric-casts = "warn"
unit-bindings = "warn"
unreachable-pub = "warn"
unsafe-code = "warn"
unsafe-op-in-unsafe-fn = "warn"
unused-crate-dependencies = "warn"
unused-extern-crates = "warn"
unused-import-braces = "warn"
unused-lifetimes = "warn"
unused-macro-rules = "warn"
unused-qualifications = "warn"
unused-tuple-struct-fields = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
absolute-paths = "allow"
blanket-clippy-restriction-lints = "allow"
implicit-return = "allow"
missing-docs-in-private-items = "allow"
missing-trait-methods = "allow"
module-name-repetitions = "allow"
multiple-crate-versions = "allow"
multiple-inherent-impl = "allow"
non-ascii-literal = "allow"
partial_pub_fields = "allow"
print-stderr = "allow"
print-stdout = "allow"
question-mark-used = "allow"
self-named-module-files = "allow"
single-call-fn = "allow"
single-char-lifetime-names = "allow"
std-instead-of-alloc = "allow"
std-instead-of-core = "allow"
wildcard-enum-match-arm = "allow"

[dependencies]
twilight-http = { version = "0.15", features = ["rustls-webpki-roots", "simd-json", "trust-dns"] }
twilight-model = "0.15"
